test/should_fail/catch_expr.erl
-module(catch_expr).

-export([foo/1]).

-spec foo(nok) -> ok.
foo(X) ->
    A = (catch X),
    A.
